# temps

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CHANGES-FROM-UPSTREAM.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  RELEASE_CHECKLIST_v0.0.7.md  ROLLBACK.md  SECURITY.md  _typos.toml  checklist.md  cliff.toml  docker-compose.override.yml  docker-compose.yml
crates/temps-agent/: Cargo.toml
crates/temps-agent/src/: auth.rs  handlers.rs  internal_proxy.rs  lib.rs  network_sync.rs  route_store.rs  route_sync_client.rs  server.rs  service_handlers.rs
crates/temps-agents/: Cargo.toml
crates/temps-agents-mcp-proxy/: Cargo.toml
crates/temps-agents-mcp-proxy/src/: lib.rs
crates/temps-agents/examples/: build_sandbox_images.rs  print_bundle.rs  print_dockerfile.rs
crates/temps-agents/src/: error.rs  lib.rs  plugin.rs  preview_gateway.rs
crates/temps-agents/src/ai_cli/: catalog.rs  claude.rs  codex.rs  mod.rs  opencode.rs
crates/temps-agents/src/handlers/: ai_providers.rs  autofixer.rs  config.rs  definitions.rs  mod.rs  preview_gateway.rs  runs.rs  secrets.rs  trigger.rs  workflows.rs
crates/temps-agents/src/sandbox/: docker.rs  firecracker.rs  git_credential_bundle.rs  local.rs  mod.rs  pty_agent_bundle.rs  routing.rs  user.rs
crates/temps-agents/src/services/: autofixer.rs  config_service.rs  cron_scheduler.rs  definition_service.rs  executor.rs  mod.rs  prompt_builder.rs  run_service.rs  sandbox_injector.rs  sandbox_registry.rs  secret_service.rs
crates/temps-agents/tests/: firecracker_e2e.rs  sandbox_credential_smoke_test.rs
crates/temps-ai/: Cargo.toml
crates/temps-ai-api-tools/: Cargo.toml
crates/temps-ai-api-tools/src/: caller.rs  cli.rs  error.rs  handle.rs  index.rs  integration_tests.rs  lib.rs
crates/temps-ai-chat/: Cargo.toml
crates/temps-ai-chat/src/: audit.rs  handlers.rs  lib.rs  pending_actions.rs  plugin.rs  provider.rs  service.rs  trace_tools.rs
crates/temps-ai-chat/src/providers/: alert.rs  api_tools.rs  deployment.rs  mod.rs  (+3 more)
crates/temps-ai-gateway/: Cargo.toml
crates/temps-ai-gateway/src/: error.rs  lib.rs  plugin.rs  types.rs
crates/temps-ai-gateway/tests/: mock_provider_servers.rs  provider_integration_test.rs
crates/temps-ai/src/: diagnostics.rs  lib.rs  schemas.rs  service.rs  streaming.rs  typed.rs
crates/temps-analytics-backend/: Cargo.toml
crates/temps-analytics-backend/src/: clickhouse.rs  error.rs  lib.rs  migrations.rs  timescale.rs  traits.rs  types.rs
crates/temps-analytics-events/: Cargo.toml
crates/temps-analytics-events/src/: plugin.rs
crates/temps-backup/: Cargo.toml
crates/temps-backup/src/: plugin.rs
crates/temps-backup/tests/: mariadb_pitr_e2e.rs
crates/temps-captcha-wasm/: Cargo.toml
crates/temps-captcha-wasm/pkg/: temps_captcha_wasm.js  temps_captcha_wasm_bg.wasm
crates/temps-cli/: Cargo.toml  build.rs
crates/temps-cli/src/: lib.rs  main.rs
crates/temps-compose/: Cargo.toml
crates/temps-compose/src/: lib.rs  plugin.rs
crates/temps-core/: Cargo.toml  templates.yaml
crates/temps-core/src/: app_settings.rs  client_ip.rs  deployment.rs  encryption.rs  env_vars_provider.rs  error_builder.rs  error_metrics.rs  jobs.rs  lib.rs  node_pki.rs  notifications.rs  on_demand.rs  plugin.rs  project_access.rs  public_hostname.rs  public_hostname_resolver.rs  repo_config.rs  request_metadata.rs  retention.rs  route_table.rs  secrets_manager.rs  telemetry.rs  templates.rs  tls.rs  traces.rs  update_status.rs  url_validation.rs  utils.rs  workflow_executor.rs  workflow_memory.rs
crates/temps-dns-resolver/: Cargo.toml
crates/temps-dns-resolver/src/: authority.rs  config.rs  error.rs  handle.rs  lib.rs  record.rs  sync_client.rs  upstream.rs  zone_store.rs
crates/temps-dns-resolver/tests/: end_to_end.rs
crates/temps-domains/: Cargo.toml
crates/temps-domains/src/: dns_provider.rs  domain_service.rs  plugin.rs
crates/temps-edge/: Cargo.toml
crates/temps-edge/src/: api.rs  proxy.rs
crates/temps-email-tracking/: Cargo.toml
crates/temps-email-tracking/src/: errors.rs  event_service.rs  handlers.rs  hmac.rs  html_rewriter.rs  lib.rs  plugin.rs  sns.rs
crates/temps-external-plugins/: Cargo.toml
crates/temps-external-plugins/src/: event_listener.rs  handler.rs  lib.rs  manager.rs  plugin.rs  proxy.rs  service.rs
crates/temps-file-store/: Cargo.toml
crates/temps-file-store/src/: fs_store.rs  lib.rs
crates/temps-git-credential/: Cargo.docker.toml  Cargo.toml
crates/temps-git-credential/src/: helper_protocol.rs  ipc.rs  lib.rs
crates/temps-git-credential/tests/: end_to_end.rs
crates/temps-log-aggregator/: Cargo.toml
crates/temps-log-aggregator/src/: error.rs  lib.rs  parser.rs  plugin.rs  types.rs
crates/temps-memory/: Cargo.toml
crates/temps-memory/src/: lib.rs
crates/temps-memory/tests/: eval.rs
crates/temps-metrics/: Cargo.toml
crates/temps-metrics/src/: error.rs  lib.rs  scraper.rs
crates/temps-metrics/tests/: postgres_checkpoint_stats_integration.rs
crates/temps-monitoring/: Cargo.toml
crates/temps-monitoring/src/: alarm_service.rs  container_health.rs  disk_space.rs  evaluator.rs  lib.rs  outage.rs  plugin.rs  services.rs
crates/temps-network/: Cargo.toml  README.md
crates/temps-network/src/: allocator.rs  config.rs  diff.rs  docker.rs  error.rs  lib.rs  manager.rs  overlay_routes.rs
crates/temps-network/tests/: it_allocator.rs  it_kernel.rs
crates/temps-observability/: Cargo.toml
crates/temps-observability/src/: error.rs  filters.rs  plugin.rs  service.rs  types.rs
crates/temps-observability/tests/: clickhouse_observe_test.rs  merge_integration.rs
crates/temps-otel/: Cargo.toml  build.rs
crates/temps-otel/src/: error.rs  lib.rs  plugin.rs  proto.rs  test_support.rs  types.rs
crates/temps-otel/tests/: clickhouse_storage_test.rs  decode_to_store_test.rs  dynamic_alert_integration_test.rs  e2e_http_test.rs  timescaledb_storage_test.rs
crates/temps-plugin-sdk/: Cargo.toml
crates/temps-plugin-sdk/src/: context.rs  error.rs  lib.rs  manifest.rs  protocol.rs  runtime.rs
(+1850 files in other folders)
