[workspace]
resolver = "2"
members = [
    # Application crates
    "crates/temps-cli",
    # Library crates
    "crates/temps-core",
    "crates/temps-ai",
    "crates/temps-ai-chat",
    "crates/temps-entities",
    "crates/temps-migrations",
    "crates/temps-database",
    "crates/temps-queue",
    "crates/temps-auth",
    "crates/temps-git",
    "crates/temps-presets",
    "crates/temps-logs",
    "crates/temps-deployer",
    "crates/temps-projects",
    "crates/temps-domains",
    "crates/temps-proxy",
    "crates/temps-providers",
    "crates/temps-query",
    "crates/temps-query-postgres",
    "crates/temps-query-s3",
    "crates/temps-query-redis",
    "crates/temps-query-mongodb",
    "crates/temps-deployments",
    "crates/temps-backup",
    "crates/temps-backup-core",
    "crates/temps-notifications",
    "crates/temps-monitoring",
    "crates/temps-network",
    "crates/temps-analytics",
    "crates/temps-audit",
    "crates/temps-config",
    "crates/temps-geo",
    "crates/temps-analytics-backend",
    "crates/temps-analytics-events",
    "crates/temps-routes",
    "crates/temps-analytics-funnels",
    "crates/temps-analytics-session-replay",
    "crates/temps-infra",
    "crates/temps-error-tracking",
    "crates/temps-analytics-performance",
    "crates/temps-status-page",
    "crates/temps-static-files",
    "crates/temps-file-store",
    "crates/temps-import-types",
    "crates/temps-import",
    "crates/temps-import-docker",
    "crates/temps-captcha-wasm",
    "crates/temps-webhooks",
    "crates/temps-email",
    "crates/temps-email-tracking",
    "crates/temps-dns",
    "crates/temps-dns-resolver",
    "crates/temps-vulnerability-scanner",
    "crates/temps-kv",
    "crates/temps-blob",
    "crates/temps-log-aggregator",
    "crates/temps-otel",
    "crates/temps-telemetry",
    "crates/temps-environments",
    "crates/temps-screenshots",
    "crates/temps-embeddings",
    "crates/temps-plugin-sdk",
    "crates/temps-wireguard",
    "crates/temps-ai-gateway",
    "crates/temps-agents",
    "crates/temps-agents-mcp-proxy",
    "crates/temps-memory",
    "crates/temps-sandbox",
    "crates/temps-pty-agent",
    "crates/temps-git-credential",
    "crates/temps-agent",
    "crates/temps-edge",
    "crates/temps-preview-gateway",
    "crates/temps-external-plugins",
    "crates/temps-revenue",
    "crates/temps-observability",
    "crates/temps-metrics",
    "crates/temps-ai-api-tools",
    "examples/example-plugin",
    "examples/lighthouse-plugin",
    "examples/indexnow-plugin",
    "examples/google-indexing-plugin",
]

[workspace.package]
version = "0.1.0-beta.42"
edition = "2021"
license = "Apache-2.0"
authors = ["Temps Contributors"]
repository = "https://github.com/gotempsh/temps"
homepage = "https://github.com/gotempsh/temps"

[workspace.dependencies]
# ============================================================================
# Async Runtime & Concurrency
# ============================================================================
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3.31"
futures-util = "0.3.31"
async-trait = "0.1.68"
async-stream = "0.3"

# ============================================================================
# Serialization & Deserialization
# ============================================================================
serde = { version = "=1.0.228", features = ["derive", "rc"] }
serde_derive = "1.0"
serde_json = "1.0.140"
serde_yaml = "0.9"
serde_urlencoded = "0.7.1"
serde_bytes = "0.11.17"
serde_path_to_error = "0.1.20"
serde_test = "1.0.177"
serde-transcode = "1.1.1"
serde-vars = "0.2.0"

# ============================================================================
# Error Handling & Logging
# ============================================================================
anyhow = "1.0.86"
thiserror = "2.0.17"
log = "0.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std", "fmt", "registry"] }

# ============================================================================
# Date/Time & UUID
# ============================================================================
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4", "v5", "fast-rng", "macro-diagnostics"] }

# ============================================================================
# Database - ORM & Migrations
# ============================================================================
sea-orm = { version = "1.1.14", features = [
    "sqlx-sqlite",
    "sqlite-use-returning-for-3_35",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
    "debug-print",
    "mock"
] }
sea-orm-migration = { version = "1.1", features = [
    "sqlx-sqlite",
    "sqlite-use-returning-for-3_35",
    "sqlx-postgres",
    "runtime-tokio-rustls"
] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
rusqlite = { version = "0.32.0", features = ["bundled", "trace"] }

# ============================================================================
# HTTP Framework & Web Server
# ============================================================================
axum = { version = "0.8", features = ["multipart", "form", "ws"] }
axum-macros = "0.5.0-alpha.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "catch-panic", "trace"] }
tower-cookies = "0.11"
cookie = "0.18"
http = "1.3.1"
http-body-util = "0.1"
hyper = { version = "1.5.2", features = ["full"] }

# ============================================================================
# HTTP Client
# ============================================================================
reqwest = { version = "0.12.15", features = ["json", "stream", "multipart", "rustls-tls"] }

# ============================================================================
# API Documentation (OpenAPI/Swagger)
# ============================================================================
utoipa = { version = "5.4.0", features = ["axum_extras", "debug"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"], default-features = false }
schemars = { version = "0.8", features = ["preserve_order"] }

# ============================================================================
# Cryptography & Security
# ============================================================================
argon2 = "0.5"
aes-gcm = "0.10.3"
hkdf = "0.12"
totp-rs = "5.7.0"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
sha2 = "0.10.9"
base64 = "0.22"
hex = "0.4.3"
# openidconnect 4.x — bumped from 3.x to clear three transitive
# rustls-webpki CVEs (RUSTSEC-2026-0098/0099/0104) that came in via
# oauth2 4 → reqwest 0.11 → rustls 0.21 → rustls-webpki 0.101. 4.x
# pulls oauth2 5 → reqwest 0.12 → rustls 0.23 → webpki 0.103.x
# (patched). API breaking changes: `discover_async` / `request_async`
# now take a `&reqwest::Client` directly instead of an
# `async_http_client` adapter — this lets us own the HTTP client and
# apply our own timeout, redirect policy, and SSRF defenses (see
# `oidc_http_client` in `crates/temps-auth/src/oidc_service.rs`).
#
# `rustls-tls` — required so the reqwest::Client we build can speak
# HTTPS. Without it, hyper-util's connector rejects every
# https:// URL with "invalid URL, scheme is not http".
#
# `accept-rfc3339-timestamps` — required for Auth0 compatibility:
# Auth0 returns `updated_at` in id_tokens as an ISO 8601 string
# (e.g. `"2026-05-24T11:07:42.800Z"`) when the upstream connection
# is Google/social, instead of the Unix-seconds number the OIDC
# spec requires. Without this feature openidconnect rejects the
# entire token response with `data did not match any variant of
# untagged enum Timestamp`.
openidconnect = { version = "4.0.1", default-features = false, features = ["reqwest", "rustls-tls", "accept-rfc3339-timestamps"] }

# ============================================================================
# TLS & Certificate Management
# ============================================================================
instant-acme = "0.8.5"
rcgen = { version = "0.13.2", features = ["x509-parser"] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
    "logging",
    "aws_lc_rs"
] }
rustls-pemfile = "2.0"
rustls-platform-verifier = "0.5"
# Async TLS for the agent's mTLS listener (ADR-020 WS-2.1). `ring` matches the
# process-default CryptoProvider installed by the CLI.
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
    "tls12",
    "logging",
] }
webpki-roots = "0.26"

# ============================================================================
# Reverse Proxy (Pingora)
# ============================================================================
pingora = { version = "0.8.0" }
pingora-core = { version = "0.8.0", features = ["openssl", "connection_filter"] }
pingora-proxy = { version = "0.8.0" }
prometheus = "0.14"

# ============================================================================
# External Service Integrations
# ============================================================================
# Cloud Storage (S3/MinIO)
# default-features = false drops the deprecated `rustls` feature, which transitively
# enables aws-smithy-runtime/tls-rustls → hyper-rustls 0.24 → rustls 0.21 →
# rustls-webpki 0.101.7 (RUSTSEC-2026-0098/-0099/-0104). The modern HTTPS path
# (default-https-client → rustls-aws-lc → rustls 0.23 + aws-lc-rs) is preserved.
aws-sdk-s3 = { version = "1.112.0", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
aws-config = { version = "1.6", default-features = false, features = ["default-https-client", "rt-tokio", "credentials-process", "sso"] }
# Caching (Redis)
redis = { version = "0.28.2", features = ["tokio-comp", "connection-manager"] }

# Email (SMTP)
lettre = { version = "0.11.11", features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "tokio1-native-tls"] }

# Git Providers (GitHub, GitLab)
octocrab = "0.49.5"

# ============================================================================
# Container Management (Docker)
# ============================================================================
bollard = { version = "0.20.1", features = ["buildkit", "buildkit_providerless", "chrono", "json_data_content"] }

# ============================================================================
# Scheduling & Background Jobs
# ============================================================================
cron = "0.15.0"

# ============================================================================
# String & URL Utilities
# ============================================================================
url = "2.5.4"
urlencoding = "2.1"
slug = "0.1.6"
regex = "1.11"

# ============================================================================
# Compression & Archive
# ============================================================================
flate2 = "1.0"
tar = "0.4.45"
walkdir = "2"
zip = "2.2"
zstd = "0.13"

# ============================================================================
# CLI Framework
# ============================================================================
clap = { version = "4.4", features = ["derive", "env"] }

# ============================================================================
# System & Utilities
# ============================================================================
bytes = "1.11.1"
libc = "0.2"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
rand = "0.8"
sysinfo = "0.29.0"
tempfile = "3.12.0"
once_cell = "1.20"
notify = "6.1"

# ============================================================================
# User Agent & Analytics
# ============================================================================
woothee = "0.13.0"

# ============================================================================
# Testing
# ============================================================================
# Using git version for security fixes:
# - Uses astral-tokio-tar instead of vulnerable tokio-tar (RUSTSEC-2025-0111)
# - Compatible with bollard 0.19.x
testcontainers =  "0.27.2"


[profile.release]
codegen-units = 1
opt-level = 3

# Fast non-debug build for local "just run it" workflows. Inherits release
# semantics but parallelizes codegen, drops debug info, and strips symbols
# so link time is a fraction of `--release`. Use: `cargo run --profile fast`.
[profile.fast]
inherits = "release"
codegen-units = 16
debug = false
strip = "symbols"
lto = false
incremental = true

[profile.dev]
opt-level = 0
debug = "line-tables-only"
incremental = true
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1
debug = false

# ============================================================================
# Dependency Overrides - Security Fixes
# ============================================================================
# Known vulnerabilities from transitive dependencies (blocked on upstream):
#
# 1. RUSTSEC-2024-0437 / GHSA-2gh3-rmm4-6rq5 / CVE-2025-53605: protobuf 2.28.0 (MEDIUM)
#    - Path: pingora-core 0.8.0 → prometheus 0.13.4 → protobuf 2.28.0
#    - Fix: needs prometheus 0.14+ (protobuf 3.7.2+). pingora-core 0.8.0 AND 0.8.1
#      both pin prometheus ^0.13, and a [patch.crates-io] to protobuf 3.x fails to
#      compile (prometheus 0.13's generated code uses 2.x-only RepeatedField /
#      CodedInputStream APIs). Total upstream block until pingora bumps prometheus.
#    - Reachability: the vuln is a recursion crash when PARSING untrusted protobuf.
#      pingora emits metrics via TextEncoder (not ProtobufEncoder); its
#      PrometheusServer is not wired into any temps listener; the OTLP ingest path
#      uses prost, not protobuf 2.x. The 2.x parse code is compiled in but never
#      fed attacker input -> not reachable. (verified 2026-06-29)
#
# 2. RUSTSEC-2023-0018 / GHSA-mc8h-8q98-g5hr: remove_dir_all 0.5.3 (LOW)
#    - Path: nixpacks 1.41.0 → tempdir 0.3.7 → remove_dir_all 0.5.3
#    - Fix: needs nixpacks to drop deprecated tempdir for tempfile. nixpacks 1.41.0
#      is the crates.io latest and still uses tempdir, which hard-requires
#      remove_dir_all ^0.5 (so `--precise 0.8.0` is impossible).
#    - Reachability: the TOCTOU race lives in nixpacks get_output_dir()'s
#      TempDir::new()/remove_dir_all(output.root) branch, taken only when out_dir
#      is None. temps-presets always passes out_dir: Some(...) (nixpacks_preset.rs
#      ~L507), so that branch never executes -> dead code here. (verified 2026-06-29)
#
# 2b. GHSA-w9wp-h8wv-79jx: opentelemetry_sdk 0.30.0 (MEDIUM, dependabot-only)
#    - Path: relay-event-schema (git pin getsentry/relay) → opentelemetry-proto 0.30
#      → opentelemetry_sdk 0.30.0
#    - Fix: needs the pinned relay git rev moved to one using opentelemetry 0.32+;
#      the pin locks opentelemetry-proto to ^0.30 -> opentelemetry_sdk 0.30, with no
#      [patch] override possible. Bumping the relay rev is out of scope for a patch.
#    - Reachability: the unbounded-alloc bug is in the W3C BaggagePropagator. relay
#      pulls opentelemetry-proto only for OTLP span TYPE conversion; the propagation
#      module is compiled in (trace feature) but BaggagePropagator is never
#      instantiated and .extract() is never called on attacker headers anywhere in
#      the workspace -> not reachable. (verified 2026-06-29)
#
# 3. GHSA-xxx: libcrux-intrinsics 0.0.3 (HIGH severity, dev-dependency only)
#    - Path: testcontainers → russh → libcrux-ml-kem → libcrux-intrinsics 0.0.3
#    - Fix: Requires russh to upgrade libcrux dependencies
#    - Status: Dev-dependency only, zero production impact
#
# 4. astral-tokio-tar: RESOLVED by upgrading testcontainers 0.27.1 → 0.27.2
#
# Previously resolved:
# - atty 0.2.14: RESOLVED in Pingora 0.7.0 (upgraded to clap 4.5)
# - idna 0.2.3: RESOLVED by upgrading check-if-email-exists 0.9 → 0.11
# - lru 0.12.5: RESOLVED by upgrading aws-sdk-s3 (new version dropped lru 0.12)
# - aws-lc-sys 0.38.0 (RUSTSEC-2026-0044, RUSTSEC-2026-0048): RESOLVED by cargo update aws-lc-rs → 1.16.2
# - rustls-webpki 0.103.7 (RUSTSEC-2026-0049): RESOLVED by cargo update rustls-webpki → 0.103.10
# - tar 0.4.44 (RUSTSEC-2026-0067, RUSTSEC-2026-0068): RESOLVED by bumping tar to 0.4.45
# - rkyv 0.7.45 (RUSTSEC-2026-0001): RESOLVED by cargo update rkyv → 0.7.46
# - rustls-webpki 0.103.10 (RUSTSEC-2026-0098, -0099, -0104): RESOLVED by cargo update rustls-webpki@0.103 → 0.103.13
# - rand 0.9.2 (RUSTSEC-2026-0097): RESOLVED by cargo update rand@0.9 → 0.9.4
# - rand 0.8.5 (RUSTSEC-2026-0097): RESOLVED by cargo update rand@0.8 → 0.8.6
# - postgres-protocol 0.6.11 (RUSTSEC-2026-0179 unbounded-SCRAM-iteration CPU
#     exhaustion DoS; RUSTSEC-2026-0180 hstore decode panic DoS): RESOLVED by
#     cargo update postgres-protocol → 0.6.12. Network-reachable: temps connects to
#     user-managed external Postgres servers, so a malicious/compromised server
#     could trigger these against the temps process.
# - tokio-postgres 0.7.17 (RUSTSEC-2026-0178 DataRow-with-too-few-fields panic
#     DoS): RESOLVED by cargo update tokio-postgres → 0.7.18 (pulls postgres-types
#     → 0.2.14). Same user-managed-server reachability as above.
# - quinn-proto 0.11.14 (RUSTSEC-2026-0185 remote memory exhaustion via unbounded
#     out-of-order stream reassembly): RESOLVED by cargo update quinn-proto →
#     0.11.15. (Orphaned lock entry with no active dependents — bumped for hygiene
#     so `cargo audit` stays clean.)
# - rustls-webpki 0.101.7 (RUSTSEC-2026-0098, -0099, -0104) on rustls 0.21:
#     RESOLVED by disabling default features on aws-sdk-s3, aws-sdk-sesv2, and
#     aws-config so the deprecated `rustls` feature (which activates
#     aws-smithy-runtime/tls-rustls → hyper-rustls 0.24 → rustls 0.21 →
#     rustls-webpki 0.101.7) is no longer enabled. The modern path
#     (default-https-client → rustls-aws-lc → rustls 0.23 + aws-lc-rs) is kept.
#
# 5. RUSTSEC-2023-0071: rsa 0.9.10 (MEDIUM severity)
#    - Title: Marvin Attack: potential key recovery through timing sidechannels
#    - Dependency paths:
#        jsonwebtoken 10.4.0 <- octocrab      (GitHub App JWT signing;
#          crates/temps-git/src/services/github.rs,
#          crates/temps-git/src/services/git_provider_manager.rs)
#        jsonwebtoken 10.4.0 <- openidconnect (OIDC id_token verification)
#        rsa direct usage in crates/temps-dns/src/providers/gcp.rs
#          (GCP Cloud DNS service-account JWT signing, sign_rs256())
#    - Status: no fixed version exists upstream (the rsa crate has no constant-time
#      release yet). Tracked.
#    - Assessment: the Marvin Attack is an adaptive chosen-ciphertext attack against
#      RSA-PKCS#1v1.5 *decryption*. Temps has zero RSA decryption usage -- all three
#      paths above are RSA *signing* only (OIDC verification is a separate,
#      unaffected public-key op). Signing uses a non-constant-time modexp, which is
#      a real but much narrower timing side-channel than Marvin's decryption
#      oracle: exploiting it needs millions of samples at nanosecond precision, the
#      signing op itself (~10-50us) is buried inside git/DNS operations dominated
#      by 100-500ms of network I/O, and the signed payload (app_id/iat/exp or
#      service-account claims) isn't attacker-controlled. Blast radius if ever
#      exploited is per-customer only: each org supplies its own GitHub App or GCP
#      service-account private key, not a shared temps platform secret.
#    - Follow-up: monitor upstream `rsa` for a constant-time release; evaluate
#      ring/aws-lc-rs-backed signing as a replacement for both paths.
#
# All remaining items are transitive dependencies from third-party crates that we
# cannot directly patch without forking. Monitoring upstream for updates.
