[package]
name = "temps-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
temps-core = { path = "../temps-core" }
temps-deployer = { path = "../temps-deployer" }
