[package]
name = "temps-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
sysinfo = { workspace = true }
uuid = { workspace = true }
http-body-util = "0.1"
bollard = { workspace = true }
bytes = { workspace = true }
temps-core = { path = "../temps-core" }
temps-deployer = { path = "../temps-deployer" }
temps-network = { path = "../temps-network" }
temps-dns-resolver = { path = "../temps-dns-resolver" }
ipnet = "2.10"
parking_lot = "0.12"
rand = { workspace = true }
# Needed for hyper::upgrade::on in the internal proxy's WS tunnel path.
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }

[dev-dependencies]
tempfile = "3"
