[package]
name = "temps-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
sysinfo = { workspace = true }
uuid = { workspace = true }
http-body-util = "0.1"
bollard = { workspace = true }
bytes = { workspace = true }
temps-core = { path = "../temps-core" }
temps-deployer = { path = "../temps-deployer" }
temps-network = { path = "../temps-network" }
temps-dns-resolver = { path = "../temps-dns-resolver" }
ipnet = "2.10"
parking_lot = "0.12"
rand = { workspace = true }
# Needed for hyper::upgrade::on in the internal proxy's WS tunnel path,
# and for the mTLS server accept loop (ADR-020 WS-2.1).
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server-auto"] }
# mTLS: the agent serves rustls TLS with client-cert verification (WS-2.1).
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }

[dev-dependencies]
tempfile = "3"
