[package]
name = "temps-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
temps-core = { path = "../temps-core" }
temps-entities = { path = "../temps-entities" }
temps-database = { path = "../temps-database" }
temps-git = { path = "../temps-git" }
temps-config = { path = "../temps-config" }
temps-deployments = { path = "../temps-deployments" }
temps-notifications = { path = "../temps-notifications" }
temps-auth = { path = "../temps-auth" }
sea-orm = { workspace = true }
tokio = { workspace = true, features = ["process", "fs"] }
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
http = { workspace = true }
cron = "0.12"
temps-error-tracking = { path = "../temps-error-tracking" }
anyhow = { workspace = true }
bollard = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }
tar = "0.4"
pulldown-cmark = "0.12"
libc = { workspace = true }
rand = { workspace = true }
hex = "0.4"
