[package]
name = "temps-ai-api-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Internal crates
temps-auth = { path = "../temps-auth" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling & logging
thiserror = { workspace = true }
tracing = { workspace = true }

# HTTP framework
axum = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }

# API documentation
utoipa = { workspace = true }

# URL encoding
urlencoding = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
temps-entities = { path = "../temps-entities" }
chrono = { workspace = true }
