[package]
name = "temps-ai-chat"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Persistent, resumable AI debugging conversations attached to any entity (ADR-023)"
keywords = ["ai", "chat", "platform"]
categories = ["development-tools"]

[dependencies]
temps-ai = { path = "../temps-ai" }
temps-entities = { path = "../temps-entities" }
temps-core = { path = "../temps-core" }
temps-auth = { path = "../temps-auth" }
temps-logs = { path = "../temps-logs" }
temps-git = { path = "../temps-git" }

axum = { workspace = true }
utoipa = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
