[package]
name = "temps-ai-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
temps-auth = { path = "../temps-auth" }
temps-core = { path = "../temps-core" }
temps-ai = { path = "../temps-ai" }
temps-entities = { path = "../temps-entities" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.17"
axum = { workspace = true }
sea-orm = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
utoipa = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
sea-orm = { workspace = true, features = ["mock"] }
tokio = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
