[package]
name = "temps-analytics-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Core
temps-core = { path = "../temps-core" }

# Database
sea-orm = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Time
chrono = { workspace = true }
uuid = { workspace = true }

# ClickHouse client. Always linked — operators flip CH on by setting
# TEMPS_CLICKHOUSE_*; we don't make them rebuild with a feature flag for it.
clickhouse = { version = "0.15", features = ["uuid", "chrono"] }

[dev-dependencies]
tokio = { workspace = true }
