[package]
name = "temps-analytics-events"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Core dependencies
temps-core = { path = "../temps-core" }
temps-database = { path = "../temps-database" }
temps-entities = { path = "../temps-entities" }
temps-auth = { path = "../temps-auth" }
temps-proxy = { path = "../temps-proxy" }
temps-geo = { path = "../temps-geo" }
temps-analytics = { path = "../temps-analytics" }
temps-analytics-backend = { path = "../temps-analytics-backend" }
temps-config = { path = "../temps-config" }

# ClickHouse Rust client. Always linked. The actual ClickHouse backend is
# only constructed at runtime when ServerConfig::is_clickhouse_enabled()
# returns true (i.e. operator set TEMPS_CLICKHOUSE_* env vars).
clickhouse = { version = "0.15", features = ["uuid", "chrono"] }

# Web framework
axum = { workspace = true }
utoipa = { workspace = true }

# Database
sea-orm = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }
url = "2.5"

# User agent parsing
woothee = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
testcontainers = { workspace = true, features = ["http_wait_plain"] }
temps-migrations = { path = "../temps-migrations" }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
