[package]
name = "temps-backup"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
temps-backup-core = { path = "../temps-backup-core" }
temps-auth = { path = "../temps-auth" }
temps-config = { path = "../temps-config" }
temps-core = { path = "../temps-core" }
temps-database = { path = "../temps-database" }
temps-entities = { path = "../temps-entities" }
temps-notifications = { path = "../temps-notifications" }
temps-providers = { path = "../temps-providers" }
temps-logs = { path = "../temps-logs" }
serde = { workspace = true }
tokio = { workspace = true }
flate2 = { workspace = true }
tempfile = { workspace = true }
aws-sdk-s3 = { workspace = true }
# S3 clients must use a deterministic root-cert bundle. Without it, the
# default-https-client falls back to `rustls-native-certs`, which is broken
# on some macOS configurations (returns zero parsed roots) and triggers a
# `debug_assert!` panic in `aws-smithy-http-client`. Bundling Mozilla's CA
# list at compile time also makes prod hosts immune to a missing/broken
# /etc/ssl/certs, and keeps test runs hermetic.
aws-smithy-http-client = { version = "1.1", default-features = false, features = ["rustls-aws-lc"] }
webpki-root-certs = "0.26"
pem = "3"
sea-orm = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
thiserror = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
cron = "0.15.0"
anyhow = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = "0.1.17"
uuid = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }
axum = { workspace = true }
bollard = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
urlencoding = { workspace = true }

[features]
# Docker-dependent integration tests. Mirrors temps-providers: gated behind a
# feature so `cargo test` on a host without a reachable Docker socket skips
# the heavy end-to-end tests, while CI opts in explicitly. The test files
# themselves also skip gracefully at runtime when Docker is unreachable.
docker-tests = []

[dev-dependencies]
sea-orm = { workspace = true, features = ["mock"] }
testcontainers = { workspace = true }
sqlx = { workspace = true }
temps-migrations = { path = "../temps-migrations" }
tracing-subscriber = { workspace = true }
