[package]
name = "temps-captcha-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WebAssembly proof-of-work solver for Temps CAPTCHA"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
sha2 = "0.11"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
