[package]
name = "temps-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "temps"
path = "src/main.rs"

# Expose a library target so out-of-tree binaries (e.g. the EE-bundled
# `temps` in temps-ee/apps/temps-cli) can call into the CLI dispatch
# without duplicating subcommand wiring. See ADR 0001 §"Extension points".
[lib]
name = "temps_cli"
path = "src/lib.rs"

[dependencies]
# All library crates
temps-agent = { path = "../temps-agent" }
temps-ai-api-tools = { path = "../temps-ai-api-tools" }
temps-edge = { path = "../temps-edge" }
temps-ai-gateway = { path = "../temps-ai-gateway" }
temps-ai-chat = { path = "../temps-ai-chat" }
temps-analytics = { path = "../temps-analytics" }
temps-analytics-events = { path = "../temps-analytics-events" }
temps-blob = { path = "../temps-blob" }
temps-kv = { path = "../temps-kv" }
temps-analytics-funnels = { path = "../temps-analytics-funnels" }
temps-analytics-performance = { path = "../temps-analytics-performance" }
temps-analytics-session-replay = { path = "../temps-analytics-session-replay" }
temps-audit = { path = "../temps-audit" }
temps-auth = { path = "../temps-auth" }
temps-agents = { path = "../temps-agents" }
temps-sandbox = { path = "../temps-sandbox" }
temps-backup = { path = "../temps-backup" }
temps-revenue = { path = "../temps-revenue" }
temps-observability = { path = "../temps-observability" }
temps-config = { path = "../temps-config" }
temps-core = { path = "../temps-core" }
temps-database = { path = "../temps-database" }
temps-deployer = { path = "../temps-deployer" }
temps-deployments = { path = "../temps-deployments" }
temps-dns = { path = "../temps-dns" }
temps-network = { path = "../temps-network" }
temps-domains = { path = "../temps-domains" }
temps-email = { path = "../temps-email" }
temps-entities = { path = "../temps-entities" }
temps-environments = { path = "../temps-environments" }
temps-error-tracking = { path = "../temps-error-tracking" }
temps-external-plugins = { path = "../temps-external-plugins" }
temps-geo = { path = "../temps-geo" }
temps-git = { path = "../temps-git" }
temps-import = { path = "../temps-import" }
temps-infra = { path = "../temps-infra" }
temps-log-aggregator = { path = "../temps-log-aggregator" }
temps-logs = { path = "../temps-logs" }
temps-migrations = { path = "../temps-migrations" }
temps-metrics = { path = "../temps-metrics" }
temps-monitoring = { path = "../temps-monitoring" }
temps-notifications = { path = "../temps-notifications" }
temps-otel = { path = "../temps-otel" }
temps-telemetry = { path = "../temps-telemetry" }
temps-projects = { path = "../temps-projects" }
temps-providers = { path = "../temps-providers" }
temps-proxy = { path = "../temps-proxy" }
temps-routes = { path = "../temps-routes" }
temps-queue = { path = "../temps-queue" }
temps-screenshots = { path = "../temps-screenshots" }
temps-status-page = { path = "../temps-status-page" }
temps-static-files = { path = "../temps-static-files" }
temps-vulnerability-scanner = { path = "../temps-vulnerability-scanner" }
temps-webhooks = { path = "../temps-webhooks" }
temps-wireguard = { path = "../temps-wireguard" }
tokio-util = { workspace = true }

# CLI and runtime dependencies - reference from crates workspace
clap = "4.4"
colored = "3.1"
chrono = { workspace = true }
# ClickHouse client for the `temps backfill clickhouse --domain ...` data copy.
# Same version/features as the domain crates so the row structs line up.
clickhouse = { version = "0.15", features = ["uuid", "chrono"] }
argon2 = "0.5"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = { workspace = true }
dirs = { version = "6.0" }
gethostname = "1.1"
rand = { workspace = true }
hex = { workspace = true }
bollard = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
async-trait = { workspace = true }
sea-orm = { workspace = true }
sysinfo = { workspace = true }
include_dir = "0.7"
ipnet = "2.10"
mime_guess = "2.0"
thiserror = { workspace = true }
aws-sdk-s3 = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = "1.0"
indicatif = "0.18"
tar = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
sha2 = { workspace = true }
x509-parser = "0.18"
glob = "0.3"
uuid = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }
libc = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }

[dev-dependencies]
# `tower`'s `util` feature provides `ServiceExt::oneshot`, used to drive the
# console health router through a single request in unit tests without binding
# a real listener. Already present transitively; pinned here for test use.
tower = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
